# Text-OCR

./: .gitignore  README.md  release.keystore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/sskbskdrin/ocr/demo/: CameraImpl.java  CameraManager.java  DrawTextUtils.java  FileUtils.java  MainActivity.java  MultView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
ocrcvlib/: build.gradle
ocrcvlib/src/main/: AndroidManifest.xml  CMakeLists.txt
ocrcvlib/src/main/cpp/jni/: convexHull.cpp  main.cpp  ocr.cpp  ocr.h  ocr_.cpp  ocr_.h  utils.h
ocrlib/: build.gradle
ocrlib/src/main/: AndroidManifest.xml  CMakeLists.txt
ocrlib/src/main/cpp/jni/: convexHull.cpp  convexHull.h  log.h  main.cpp  ocr.cpp  ocr.h  ocr_.cpp  ocr_.h  ruler.cpp  ruler.h  type.h  utils.h
ocrlib/src/main/java/cn/sskbskdrin/ocr/: OCR.java  YuvUtils.java
ocrlib/src/main/res/layout/: activity_face_detector.xml
ocrlib/src/main/res/values/: strings.xml
